<resources>
    <string name="app_name">vanselow-HabitTracker</string>
    <string name="editText">Enter your habit</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="save">Save</string>
    <string name="addhabit">addHabit</string>
    <string name="completion_record_header">Completion Record</string>
    <string name="total_completions_header">Total Completions</string>
    <string name="days_missed_header">Days Missed</string>
</resources>
