<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harley.vanselow_habittracker.HabitDetails"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_completions_header"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/completionCount"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_missed_header"
        android:id="@+id/textView4"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="15dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completion_record_header"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:background="#00ffffff"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:id="@+id/habitListScroll"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/deleteHabit"
        android:background="#0000ffff"
        android:layout_below="@+id/textView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/completionList"
            android:divider="@drawable/hz_divider"
            android:showDividers="middle" />
    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomButtonHeight"
        android:id="@+id/deleteHabit"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWarning"
        android:onClick="deleteHabit"
        android:src="@drawable/ic_delete_black_24px"
        android:contentDescription="deleteHabitButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/missedCount"
        android:layout_alignTop="@+id/completionCount"
        android:layout_alignStart="@+id/textView4" />

</RelativeLayout>
